fixed title and subtitles in stylesheet. add font links in html. text aligned to center

--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ span {
   color: rgb(247, 237, 100);
   text-shadow: 5px 3px 2px #0e0d0d;
 }
+#mySub{
+  font-family: 'Anton', sans-serif;
+  text-shadow: 3px 3px 3px #0e0d0d;
+}
 
 .staticMap {
   margin:  0 auto;
